Adjusted page footer and stopped jumping of components at refresh

--- a/src/index.css
+++ b/src/index.css
@@ -138,6 +138,7 @@ svg {
   /* margin is to solve the overlapping from of header when used with "position: fixed" attribute */
   margin-top: 64px;
   padding: 6px;
+  min-height: 900px;
 }
 
 /* ************************************************************************************** */
@@ -158,6 +159,7 @@ svg {
   margin: 10px 0px;
   background-color: var(--side-nav-background);
   border-top: var(--secondary-color) solid 4px;
+  min-height: 431px;
 }
 .insights-and-release-info {
   width: 25%;
@@ -199,6 +201,7 @@ svg {
   margin: 10px 0px;
   background-color: var(--side-nav-background);
   border-top: var(--secondary-color) solid 4px;
+  min-height: 279px;
 }
 
 .tables {
@@ -323,6 +326,7 @@ svg {
   margin: 10px 0px;
   /* border: #009879 dotted; */
   text-align: center;
+  min-height: 475px;
 }
 .profile-info {
   text-align: center;
@@ -541,8 +545,10 @@ svg {
   /* width: 100%; */
   /* height: 100%; */
 }
+/* ************************************************************************************** */
+/* Footer styles */
+/* ************************************************************************************** */
 
-/* footer stylings */
 .page-footer {
   margin: 0 auto;
   max-width: 100%;
@@ -552,7 +558,8 @@ svg {
 .ant-layout-footer {
   background: var(--footer-background);
   color: var(--side-nav-background);
-  padding: 60px 0;
+  padding-top: 60px;
+  padding-bottom: 15px;
   text-align: center;
 }
 
@@ -599,12 +606,6 @@ svg {
 /* ************************************************************************************** */
 /* responsive */
 /* ************************************************************************************** */
-
-/* @media only screen and (max-width: 991px) {
-  .pricingBlock .ant-row > div:nth-child(2) .ant-list-item {
-    transform: scale(1.14);
-  }
-} */
 
 @media only screen and (max-width: 992px) {
   .pricingBlock .ant-row > div:nth-child(2) .ant-list-item {
